argo_workflow/local-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: local-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http2
        protocol: HTTP
      hosts:
        - "*"
    - port:
        number: 2746
        name: argo-workflow
        protocol: TCP
      hosts:
        - "*"
